--- a/slide_image_effect.html
+++ b/slide_image_effect.html
@@ -62,22 +62,22 @@
 
 </body>
 <script>
-     const track = document.getElementById("image-track");
+     let track = document.getElementById("image-track");
 
-     const handleOnDown = e => track.dataset.mouseDownAt = e.clientX;
+     let handleOnDown = e => track.dataset.mouseDownAt = e.clientX;
 
-     const handleOnUp = () => {
+     let handleOnUp = () => {
           track.dataset.mouseDownAt = "0";
           track.dataset.prevPercentage = track.dataset.percentage;
      }
 
-     const handleOnMove = e => {
+     let handleOnMove = e => {
           if (track.dataset.mouseDownAt === "0") return;
 
-          const mouseDelta = parseFloat(track.dataset.mouseDownAt) - e.clientX,
+          let mouseDelta = parseFloat(track.dataset.mouseDownAt) - e.clientX,
                maxDelta = window.innerWidth / 2;
 
-          const percentage = (mouseDelta / maxDelta) * -100,
+          let percentage = (mouseDelta / maxDelta) * -100,
                nextPercentageUnconstrained = parseFloat(track.dataset.prevPercentage) + percentage,
                nextPercentage = Math.max(Math.min(nextPercentageUnconstrained, 0), -100);
 
