--- a/slide_image_effect.html
+++ b/slide_image_effect.html
@@ -87,7 +87,7 @@
                transform: `translate(${nextPercentage}%, -50%)`
           }, { duration: 1200, fill: "forwards" });
 
-          for (const image of track.getElementsByClassName("image")) {
+          for (let image of track.getElementsByClassName("image")) {
                image.animate({
                     objectPosition: `${100 + nextPercentage}% center`
                }, { duration: 1200, fill: "forwards" });
