--- a/scroll_transition_effect.html
+++ b/scroll_transition_effect.html
@@ -13,9 +13,9 @@
           }
 
           section {
-               /* display: grid; */
-               /* align-items: center; */
-               /* place-items: center; */
+               display: grid;
+               align-items: center;
+               place-items: center;
                min-height: 100vh;
           }
 
