--- a/scroll_color_change.html
+++ b/scroll_color_change.html
@@ -5,7 +5,42 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
      <style>
-          
+             * {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 2000px;
+}
+
+.bg {
+    background-color: pink;
+    height: 450px;
+}
+
+li {
+    display: inline;
+    padding: 30px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.navbar {
+    color: white;
+    position: fixed;
+    padding: 30px 0;
+    right: 0;
+    left: 0;
+    background-color: transparent;
+}
+
+.BgColour {
+    color: black;
+    transition: all 1s;
+    background-color: rgb(250, 0, 0);
+    border-bottom: 1px solid lightgray;
+}
      </style>
 </head>
 <body>
