--- a/scroll_color_change.html
+++ b/scroll_color_change.html
@@ -44,6 +44,15 @@ li {
      </style>
 </head>
 <body>
+     <div class="bg">
+          <div id="navbar" class="navbar">
+              <ul>
+                  <li>Home</li>
+                  <li>About</li>
+                  <li>Contact Us</li>
+              </ul>
+          </div>
+      </div>
      
 </body>
 </html>
