--- a/scroll_color_change.html
+++ b/scroll_color_change.html
@@ -56,6 +56,16 @@ li {
      
 </body>
 <script>
-     
+     function scrollValue() {
+    var navbar = document.getElementById('navbar');
+    var scroll = window.scrollY;
+    if (scroll < 200) {
+        navbar.classList.remove('BgColour');
+    } else {
+        navbar.classList.add('BgColour');
+    }
+}
+
+window.addEventListener('scroll', scrollValue);
 </script>
 </html>
